@@ -200,7 +200,7 @@ attr(,"class")
 > bond <- list(settlementDays=1,
 +              issueDate=as.Date("2004-11-30"),
 +              faceAmount=100,
-+              accrualDayCounter='Thirty360',
++              dayCounter='Thirty360',
 +              paymentConvention='Unadjusted')
 > schedule <- list(effectiveDate=as.Date("2004-11-30"),
 +                  maturityDate=as.Date("2008-11-30"),
