@@ -2,6 +2,8 @@
 
 	* man/Bond.Rd: Example now uses dayCounter not accrualDayCounter
 	* man/FixedRateBond.Rd: Idem
+	* tests/RQuantLib.R: Idem
+	* tests/RQuantLib.Rout.save: Idem
 
 2018-11-11  Dirk Eddelbuettel  <edd@debian.org>
 
